trunk/Archive2/7b/a867179b968289/output
main.cpp: In function 'int main()':
main.cpp:12:5: error: 's' was not declared in this scope
     s >> std::setbase(16) >> n1 >> n2 >> n3;
     ^
